# banking-fullstack

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/infrastructure/: backend_architecture.md  celery.py  config.py  database.py  health.py  logging.py  tasks.py
backend/modules/accounts/: enums.py  models.py  routes.py  schemas.py  services.py
backend/modules/auth/: dependencies.py  routes.py  schemas.py  services.py
backend/modules/batches/: enums.py  models.py  routes.py  schemas.py  services.py
backend/modules/customer_profiles/: enums.py  models.py  routes.py  schemas.py  services.py
backend/modules/daily_balance_snapshots/: models.py  routes.py  schemas.py  services.py
backend/modules/next_of_kin/: enums.py  models.py  routes.py  schemas.py  services.py
backend/modules/notifications/: enums.py  models.py  routes.py  schemas.py  services.py
backend/modules/products/: enums.py  models.py  routes.py  schemas.py  services.py
backend/modules/reports/: routes.py  schemas.py  services.py
backend/modules/transactions/: enums.py  models.py  routes.py  schemas.py  services.py
backend/modules/users/: guards.py  models.py  permissions.py  routes.py  schemas.py  services.py
backend/tests/: conftest.py  test_account_statements.py  test_accounts.py  test_admin_kyc.py  test_auth.py  test_customer_profile.py  test_daily_balance_snapshots.py  test_end_of_day_batches.py  test_general_ledger_reports.py  test_interest_posting.py  test_next_of_kin.py  test_notifications.py  test_products.py  test_rbac.py  test_transaction_fees.py  test_transaction_ledger_entries_api.py  test_transaction_reversals.py  test_transactions.py  test_trial_balance_reports.py
(+1 files in other folders)
