[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "celery-redbeat>=2.3.3",
    "fastapi[standard]>=0.139.0",
    "flower>=2.0.1",
    "greenlet>=3.5.3",
    "jsonpickle>=4.1.2",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlmodel>=0.0.39",
]
