[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "celery-redbeat>=2.3.3",
    "fastapi[standard]>=0.139.0",
    "flower>=2.0.1",
    "greenlet>=3.5.3",
    "jsonpickle>=4.1.2",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pycountry>=26.2.16",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "phonenumbers>=9.0.34",
    "redis>=8.0.1",
    "sqlmodel>=0.0.39",
    "pydantic-extra-types>=2.10.2",
    "pycountry>=24.6.1",
    "phonenumbers>=8.13.52",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
